# OOP_3_lab

./: CMakeLists.txt  main.cpp
include/: figure.h  figure_array.h  hexagon.h  octagon.h  triangle.h
src/: figure.cpp  figure_array.cpp  hexagon.cpp  octagon.cpp  triangle.cpp
tests/: tests_figures.cpp
